syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

    
message UserAuthentication {
    message PKey {
        
        string user_name = 12; // UserConfig.userName
        AuthLocation auth_location = 11;
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    AuthType auth_type = 100; // type of user logon
    string server_name = 103;
    google.protobuf.Timestamp timestamp = 106; // timestamp of last successful authentication
}


